<?xml version="1.0"?>
<package format="2">
  <name>arm_control</name>
  <version>0.0.1</version>
  <description>Nominal control and interactive target interface for the robot arm.</description>

  <maintainer email="songzhicheng66@gmail.com">zhicheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>arm_msgs</depend>
  <depend>pinocchio</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
</package>