<?xml version="1.0"?>
<package format="2">
  <name>arm_safety_filter</name>
  <version>0.0.1</version>
  <description>Safety filtering modules for nominal robot-arm execution commands.</description>

  <maintainer email="songzhicheng66@gmail.com">zhicheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>arm_msgs</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>message_filters</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

</package>